# my-package

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publish.yml  test.yml
api/: index.html
cli/: index.html
docs/: api.md  cli.md  index.md
search/: search_index.json
src/my_package/: __init__.py  cli.py  core.py  exceptions.py  services.py
tests/cli/: test_cli.py
tests/core/: test_core.py
