[project]
name = "my-package"
version = "0.1.0"
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
authors = [
    { name = "Michael Loukeris", email = "michael.loukeris@gmail.com" }
]
maintainers = [
   { name = "Michael Loukeris", email = "michael.loukeris@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["example", "my-package"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python"
]

[project.scripts]
my-package = "my_package:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"