[project]
name = "my-package"
dynamic = ["version"]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
authors = [
    { name = "Michael Loukeris", email = "michael.loukeris@gmail.com" }
]
maintainers = [
   { name = "Michael Loukeris", email = "michael.loukeris@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["example", "my-package"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python"
]

[project.scripts]
my-package = "my_package.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "TID", "T20", "INP", "UP", "I", "S", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=my_package --cov-report=term-missing"
