[project]
name = "my-package-mloukeris"
dynamic = ["version"]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
authors = [
    { name = "Michael Loukeris", email = "michael.loukeris@gmail.com" }
]
maintainers = [
   { name = "Michael Loukeris", email = "michael.loukeris@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["example", "my-package-mloukeris"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python"
]

[project.scripts]
my-package = "my_package.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_package"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs<2.0",
    "mkdocs-click>=0.9.0",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "tox>=4.47.3",
    "tox-uv>=1.33.1",
]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "TID", "T20", "INP", "UP", "I", "S", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=my_package --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=75"

[tool.tox]
requires = ["tox>=4", "tox-uv>=1.0"]
env_list = ["3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "run the tests with pytest under {base_python}"
dependency_groups = ["test"]
commands = [
    ["pytest", "{posargs:tests}"],
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
